Footer: embed alignment fix

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -39,4 +39,5 @@ footer .embed > div{
 footer .embed-wrapper{
   display: flex;
   justify-content: center;
+  height: 270px;
 }
